Update text to match code

--- a/notebooks/Federated MNIST PT example with simplified primitives.ipynb
+++ b/notebooks/Federated MNIST PT example with simplified primitives.ipynb
@@ -271,7 +271,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`@evaluate_server_model` is coded to test the server model using external data. The function that uses it must have at least one argument, the FlexModel at the server."
+    "`evaluate_global_model` is used to test the server model, quite similar to the `train` function above-described."
    ]
   },
   {
