--- a/notebooks/Federated Text Classifcation PT using Hugginface dataset and trainer.ipynb
+++ b/notebooks/Federated Text Classifcation PT using Hugginface dataset and trainer.ipynb
@@ -372,7 +372,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After training the model and setting the weights onto the server model, we can just evaluate it using the *evaluate_server_model* decorator. This decorator is created to test the server model using external data."
+    "After training the model and setting the weights onto the server model, we can just evaluate it using `evaluate_global_model`, quite similar to the `train` function above-described."
    ]
   },
   {
