fix many bugs in from_config when using features_per_node, add shuffle option, improve tests overall

--- a/notebooks/Federating data with FLEXible.ipynb
+++ b/notebooks/Federating data with FLEXible.ipynb
@@ -57,46 +57,54 @@
    "metadata": {},
    "source": [
     "To federate a centralized dataset, it is required to describe the federation process in a `FedDatasetConfig` object.\n",
+    "The following table shows the compatiblity of each option:\n",
     "\n",
-    "A `FedDatasetConfig` object has the following fields:\n",
-    "| Options compatibility   | **n_nodes** | **node_ids** | **weights** | **weights_per_label** | **replacement** | **labels_per_node** | **features_per_node** | **indexes_per_node** | **group_by_label_index** |\n",
-    "|-------------------------|---------------|------------------|-------------|-----------------------|-----------------|------------------------|-------------------------|------------------------|----------------------|\n",
-    "| **n_nodes**           | -             | Y                | Y           | Y                     | Y               | Y                      | Y                       | N                      | N                    |\n",
-    "| **node_ids**        | -             | -                | Y           | Y                     | Y               | Y                      | Y                       | Y                      | N                    |\n",
-    "| **weights**             | -             | -                | -           | N                     | Y               | Y                      | Y                       | N                      | N                    |\n",
-    "| **weights_per_label**   | -             | -                | -           | -                     | Y               | N                      | N                       | N                      | N                    |\n",
-    "| **replacement**         | -             | -                | -           | -                     | -               | Y                      | N                       | N                      | N                    |\n",
-    "| **labels_per_node**  | -             | -                | -           | -                     | -               | -                      | N                       | N                      | N                    |\n",
-    "| **features_per_node** | -             | -                | -           | -                     | -               | -                      | -                       | N                      | N                    |\n",
-    "| **indexes_per_node**  | -             | -                | -           | -                     | -               | -                      | -                       | -                      | N                    |\n",
-    "| **group_by_label_index**    | -             | -                | -           | -                     | -               | -                      | -                       | -                      | -                    |\n",
+    "| Options compatibility   | **n_nodes** | **node_ids** | **weights** | **weights_per_label** | **replacement** | **labels_per_node** | **features_per_node** | **indexes_per_node** | **group_by_label_index** | **keep_labels** | **shuffle** |\n",
+    "|-------------------------|-------------|--------------|-------------|-----------------------|-----------------|---------------------|-----------------------|----------------------|--------------------------|-----------------|-------------|\n",
+    "| **n_nodes**             | -           | Y            | Y           | Y                     | Y               | Y                   | Y                     | N                    | N                        | Y               | Y           |\n",
+    "| **node_ids**            | -           | -            | Y           | Y                     | Y               | Y                   | Y                     | Y                    | N                        | Y               | Y           |\n",
+    "| **weights**             | -           | -            | -           | N                     | Y               | Y                   | Y                     | N                    | N                        | Y               | Y           |\n",
+    "| **weights_per_label**   | -           | -            | -           | -                     | Y               | N                   | N                     | N                    | N                        | Y               | Y           |\n",
+    "| **replacement**         | -           | -            | -           | -                     | -               | Y                   | N                     | N                    | N                        | Y               | Y           |\n",
+    "| **labels_per_node**     | -           | -            | -           | -                     | -               | -                   | N                     | N                    | N                        | Y               | Y           |\n",
+    "| **features_per_node**   | -           | -            | -           | -                     | -               | -                   | -                     | N                    | N                        | Y               | Y           |\n",
+    "| **indexes_per_node**    | -           | -            | -           | -                     | -               | -                   | -                     | -                    | N                        | Y               | N           |\n",
+    "| **group_by_label_index**| -           | -            | -           | -                     | -               | -                   | -                     | -                    | -                        | N               | Y           |\n",
+    "| **keep_labels**         | -           | -            | -           | -                     | -               | -                   | -                     | -                    | -                        | -               | Y           |\n",
+    "| **shuffle**             | -           | -            | -           | -                     | -               | -                   | -                     | -                    | -                        | -               | -           |\n",
     "\n",
+    "Attributes\n",
+    "----------\n",
     "- seed: Optional[int]\n",
-    "        Seed used to make the federated dataset generated reproducible with this configuration. Default None.\n",
+    "    Seed used to make the federated dataset generated reproducible with this configuration. Default None.\n",
     "- n_nodes: int\n",
-    "        Number of clients among which to split the centralized dataset. Default 2.\n",
+    "    Number of nodes among which to split a centralized dataset. Default 2.\n",
+    "- shuffle: bool\n",
+    "    If True data is shuffled before being sampled. Default False.\n",
     "- node_ids: Optional[List[Hashable]]\n",
-    "        Names to identifty each client, if not provided clients will be indexed using integers. If n_nodes is also \\\n",
-    "        given, we consider up to n_nodes elements. Default None.\n",
+    "    Ids to identifty each node, if not provided, nodes will be indexed using integers. If n_nodes is also \\\n",
+    "    given, we consider up to n_nodes elements. Default None.\n",
     "- weights: Optional[npt.NDArray]\n",
-    "        A numpy.array which provides the proportion of data to give to each client. Default None.\n",
+    "    A numpy.array which provides the proportion of data to give to each node. Default None.\n",
     "- weights_per_label: Optional[npt.NDArray]\n",
-    "        A numpy.array which provides the proportion of data to give to each client and class of the dataset to federate. \\\n",
-    "        We expect a bidimensional array of shape (n, m) where \"n\" is the number of clients and \"m\" is the number of classes of \\\n",
-    "        the dataset to federate. Default None.\n",
+    "    A numpy.array which provides the proportion of data to give to each node and class of the dataset to federate. \\\n",
+    "    We expect a bidimensional array of shape (n, m) where \"n\" is the number of nodes and \"m\" is the number of labels of \\\n",
+    "    the dataset to federate. Default None.\n",
     "- replacement: bool\n",
-    "        Whether the samping procedure used to split a centralized dataset is with replacement or not. Default False\n",
+    "    Whether the samping procedure used to split a centralized dataset is with replacement or not. Default False\n",
     "- labels_per_node: Optional[Union[int, npt.NDArray, Tuple[int]]]\n",
-    "        Classes to assign to each client, if provided as an int, it is the number classes per client, if provided as a \\\n",
-    "        tuple of ints, it establishes a mininum and a maximum of number of classes per client, a random number sampled \\\n",
-    "        in such interval decides the number of classes of each client. If provided as a list of lists, it establishes the classes \\\n",
-    "        assigned to each client. Default None.\n",
+    "    labels to assign to each node, if provided as an int, it is the number labels per node, if provided as a \\\n",
+    "    tuple of ints, it establishes a mininum and a maximum of number of labels per node, a random number sampled \\\n",
+    "    in such interval decides the number of labels of each node. If provided as a list of lists, it establishes the labels \\\n",
+    "    assigned to each node. Default None.\n",
     "- features_per_node: Optional[Union[int, npt.NDArray, Tuple[int]]]\n",
-    "        Features to assign to each client, it share the same interface as labels_per_node. Default None.\n",
+    "    Features to assign to each node, it share the same interface as labels_per_node. Default None.\n",
     "- indexes_per_node: Optional[npt.NDArray]\n",
-    "        Data indexes to assign to each client. Default None.\n",
+    "    Data indexes to assign to each node. Default None.\n",
     "- group_by_label_index: Optional[int]\n",
-    "        Index which indicates which feature unique values will be used to generate federated clients. Default None.\n"
+    "    Index which indicates which feature unique values will be used to generate federated nodes. Default None.\n",
+    "- keep_labels: Optional[list[bool]]\n",
+    "    Whether each node keeps or not the labels or y_data"
    ]
   },
   {
@@ -319,6 +327,7 @@
     "\n",
     "config = FedDatasetConfig(seed=0)\n",
     "config.replacement = True  # it is not clear whether clients share their data or not\n",
+    "config.shuffle = True\n",
     "config.n_nodes = 10\n",
     "num_classes = 10\n",
     "\n",
@@ -785,7 +794,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
