remove from_numpy and from_list and implement from_array

--- a/notebooks/Create custom architectures using FLEXible.ipynb
+++ b/notebooks/Create custom architectures using FLEXible.ipynb
@@ -49,8 +49,8 @@
     "    iris.data, iris.target, test_size=0.33, random_state=42\n",
     ")\n",
     "\n",
-    "train_iris = Dataset.from_numpy(X_train, y_train)\n",
-    "test_iris = Dataset.from_numpy(X_test, y_test)\n",
+    "train_iris = Dataset.from_array(X_train, y_train)\n",
+    "test_iris = Dataset.from_array(X_test, y_test)\n",
     "\n",
     "federated_iris = FedDataDistribution.iid_distribution(train_iris, n_clients=5)"
    ]
