--- a/notebooks/Federating a clustering model.ipynb
+++ b/notebooks/Federating a clustering model.ipynb
@@ -50,8 +50,8 @@
    "source": [
     "from flex.data import FedDataDistribution, Dataset\n",
     "\n",
-    "train_iris = Dataset.from_numpy(X_train, y_train)\n",
-    "test_iris = Dataset.from_numpy(X_test, y_test)\n",
+    "train_iris = Dataset.from_array(X_train, y_train)\n",
+    "test_iris = Dataset.from_array(X_test, y_test)\n",
     "\n",
     "federated_iris = FedDataDistribution.iid_distribution(train_iris, n_nodes=5)\n",
     "# Assign test data to server_id\n",
