--- a/notebooks/Federating data with FLEXible.ipynb
+++ b/notebooks/Federating data with FLEXible.ipynb
@@ -423,7 +423,7 @@
     "    indexes = np.isin(y, selected_labels)\n",
     "    X_data = X[indexes]\n",
     "    y_data = y[indexes]\n",
-    "    return Dataset.from_numpy(X_data, y_data)\n",
+    "    return Dataset.from_array(X_data, y_data)\n",
     "\n",
     "\n",
     "randomly_transformed_federated_dataset = personalized_cifar_dataset.apply(\n",
