--- a/notebooks/Federating a linear regression model.ipynb
+++ b/notebooks/Federating a linear regression model.ipynb
@@ -53,8 +53,8 @@
    "source": [
     "from flex.data import FedDataDistribution, Dataset\n",
     "\n",
-    "train_diabetes = Dataset.from_numpy(X_train, y_train)\n",
-    "test_diabetes = Dataset.from_numpy(X_test, y_test)\n",
+    "train_diabetes = Dataset.from_array(X_train, y_train)\n",
+    "test_diabetes = Dataset.from_array(X_test, y_test)\n",
     "\n",
     "federated_diabetes = FedDataDistribution.iid_distribution(train_diabetes, n_nodes=5)\n",
     "\n",
