--- a/notebooks/Vertical Federated Adult-income Classification PT.ipynb
+++ b/notebooks/Vertical Federated Adult-income Classification PT.ipynb
@@ -72,7 +72,7 @@
    "source": [
     "from flex.data import Dataset, FedDatasetConfig, FedDataDistribution\n",
     "\n",
-    "dataset = Dataset.from_numpy(x_data.to_numpy(), y_data.to_numpy())\n",
+    "dataset = Dataset.from_array(x_data.to_numpy(), y_data.to_numpy())\n",
     "\n",
     "config = FedDatasetConfig(\n",
     "    seed=0,\n",
@@ -132,7 +132,7 @@
     "    x_data = local_dataset.X_data.to_numpy()\n",
     "    y_data = local_dataset.y_data\n",
     "    encoded_x_data = ohe_encoder.fit_transform(x_data)\n",
-    "    return Dataset.from_numpy(encoded_x_data, y_data)\n",
+    "    return Dataset.from_array(encoded_x_data, y_data)\n",
     "\n",
     "\n",
     "# One hot encode each dataset individually\n",
@@ -275,8 +275,8 @@
     "            test_size=test_size,\n",
     "            random_state=common_random_state,\n",
     "        )\n",
-    "        train_dataset = Dataset.from_list(X_train, y_train)\n",
-    "        test_dataset = Dataset.from_list(X_test, y_test)\n",
+    "        train_dataset = Dataset.from_array(X_train, y_train)\n",
+    "        test_dataset = Dataset.from_array(X_test, y_test)\n",
     "    else:\n",
     "        train_dataset, test_dataset = train_test_split(\n",
     "            local_dataset.X_data, test_size=test_size, random_state=common_random_state\n",
