--- a/notebooks/Vertical Federated Adult-income Classification TF.ipynb
+++ b/notebooks/Vertical Federated Adult-income Classification TF.ipynb
@@ -72,7 +72,7 @@
    "source": [
     "from flex.data import Dataset, FedDatasetConfig, FedDataDistribution\n",
     "\n",
-    "dataset = Dataset.from_numpy(x_data.to_numpy(), y_data.to_numpy())\n",
+    "dataset = Dataset.from_array(x_data.to_numpy(), y_data.to_numpy())\n",
     "\n",
     "config = FedDatasetConfig(\n",
     "    seed=0,\n",
@@ -132,7 +132,7 @@
     "    x_data = local_dataset.X_data.to_numpy()\n",
     "    y_data = local_dataset.y_data\n",
     "    encoded_x_data = ohe_encoder.fit_transform(x_data)\n",
-    "    return Dataset.from_numpy(encoded_x_data, y_data)\n",
+    "    return Dataset.from_array(encoded_x_data, y_data)\n",
     "\n",
     "\n",
     "# One hot encode each dataset individually\n",
