Updated readthedocs yaml. Formatted notebooks with black[notebook]. Solved bug on notebook for creating federated architectures.

--- a/notebooks/Create custom architectures using FLEXible.ipynb
+++ b/notebooks/Create custom architectures using FLEXible.ipynb
@@ -52,7 +52,7 @@
     "train_iris = Dataset.from_array(X_train, y_train)\n",
     "test_iris = Dataset.from_array(X_test, y_test)\n",
     "\n",
-    "federated_iris = FedDataDistribution.iid_distribution(train_iris, n_clients=5)"
+    "federated_iris = FedDataDistribution.iid_distribution(train_iris, n_nodes=5)"
    ]
   },
   {
