--- a/notebooks/Federated Text Classifcation PT using Hugginface dataset and trainer.ipynb
+++ b/notebooks/Federated Text Classifcation PT using Hugginface dataset and trainer.ipynb
@@ -40,9 +40,7 @@
     "device = (\n",
     "    \"cuda\"\n",
     "    if torch.cuda.is_available()\n",
-    "    else \"mps\"\n",
-    "    if torch.backends.mps.is_available()\n",
-    "    else \"cpu\"\n",
+    "    else \"mps\" if torch.backends.mps.is_available() else \"cpu\"\n",
     ")"
    ]
   },
