Revert "Minor changes"

--- a/notebooks/Federated CIFAR10 PT example with primitives.ipynb
+++ b/notebooks/Federated CIFAR10 PT example with primitives.ipynb
@@ -34,7 +34,9 @@
     "device = (\n",
     "    \"cuda\"\n",
     "    if torch.cuda.is_available()\n",
-    "    else \"mps\" if torch.backends.mps.is_available() else \"cpu\"\n",
+    "    else \"mps\"\n",
+    "    if torch.backends.mps.is_available()\n",
+    "    else \"cpu\"\n",
     ")\n",
     "device"
    ]
@@ -431,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
