--- a/notebooks/Federated MNIST PT example with flexible decorators.ipynb
+++ b/notebooks/Federated MNIST PT example with flexible decorators.ipynb
@@ -32,7 +32,9 @@
     "device = (\n",
     "    \"cuda\"\n",
     "    if torch.cuda.is_available()\n",
-    "    else \"mps\" if torch.backends.mps.is_available() else \"cpu\"\n",
+    "    else \"mps\"\n",
+    "    if torch.backends.mps.is_available()\n",
+    "    else \"cpu\"\n",
     ")"
    ]
   },
