Fix distributed notebook

--- a/notebooks/distributed.ipynb
+++ b/notebooks/distributed.ipynb
@@ -62,7 +62,7 @@
     "    model = FlexModel()\n",
     "    dataset = Dataset.from_array([1, 2, 3], [1, 2, 3])\n",
     "    # Finally run the model in order to connect to the server\n",
-    "    BasicClient(dataset, model).run(address=\"localhost:50051\")"
+    "    BasicClient(dataset, model, dataset).run(address=\"localhost:50051\")"
    ]
   },
   {
