chore: Update notebook with alternative Server API using asyncio

--- a/notebooks/Distributing an existing FLEXible experiment.ipynb
+++ b/notebooks/Distributing an existing FLEXible experiment.ipynb
@@ -330,7 +330,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, the Server API allow us to fetch information from clients, providing us with a simple interface to use. The only important thing to notice here is that we must call `server.stop()` at the end of the code. This is necessary since `server.run()` starts multiple threads that will hang until we call this method."
+    "As we can see, the Server API allow us to fetch information from clients, providing us with a simple interface to use. The only important thing to notice here is that we must call `server.stop()` at the end of the code. This is necessary since `server.run()` starts multiple threads that will hang until we call this method.\n",
+    "\n",
+    "\n",
+    "Also FLEX provides an alternative Server API based on `asyncio` and thus the `async/await` syntax. This API is not only more efficient but also allows to run operations with timeout. The API is mostly the same and can be found on `flex.distributed.aio.Server`. Here we can see the previous server code with this API."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Server_aio.py\n",
+    "import asyncio\n",
+    "\n",
+    "from flex.distributed.aio import Server\n",
+    "\n",
+    "async def run_server():\n",
+    "    # We need to create the server and storing it in a variable.\n",
+    "    server = Server()\n",
+    "\n",
+    "    # Start the server.\n",
+    "    await server.run(address=\"your_address_here\", port=8080)\n",
+    "\n",
+    "    # Now we are able to use the server to communicate with clients.\n",
+    "    # We are able to see the total number of clients connected to the server.\n",
+    "    clients_connected = len(server)\n",
+    "\n",
+    "    # Also we can wait for getting some ammount of clients connected\n",
+    "    await server.wait_for_clients(10)\n",
+    "\n",
+    "    # To retrieve their ids.\n",
+    "    clients_ids = server.get_ids()\n",
+    "\n",
+    "    # Now we may select a given ammoount of clients to run the FL process.\n",
+    "    number_of_clients = 10\n",
+    "    selected_ids = clients_ids[:number_of_clients]\n",
+    "\n",
+    "    # We can now tell the clients to start training.\n",
+    "    # By passing the selected ids, the server will only communicate with the selected clients.\n",
+    "    metrics = await server.train(node_ids=selected_ids)\n",
+    "\n",
+    "    # Let's see the metrics.\n",
+    "    for node_id in metrics:\n",
+    "        print(f\"Client with id {node_id} has sent the following metrics: {metrics[node_id]}\")\n",
+    "        \n",
+    "    # Running evaluation is equivalent.\n",
+    "    metrics = await server.eval(node_ids=selected_ids)\n",
+    "\n",
+    "    # Now, we can also get the weights from the clients.\n",
+    "    weights = await server.collect_weights(node_ids=selected_ids)\n",
+    "\n",
+    "    # This weights can be aggregated\n",
+    "    aggregate_weights = aggregate_with_fedavg.__wrapped__(weights)\n",
+    "\n",
+    "    # And then send the aggregated weights to the clients.\n",
+    "    await server.send_weights(aggregate_weights, node_ids=selected_ids)\n",
+    "\n",
+    "    # Finally, we can stop the server.\n",
+    "    # This is very important to avoid memory leaks.\n",
+    "    await server.stop()\n",
+    "\n",
+    "# Run with asyncio\n",
+    "asyncio.run(run_server())"
    ]
   }
  ],
