Refactor ClientBuilder to use build_model method for building the client model

--- a/notebooks/Distributing an existing FLEXible experiment.ipynb
+++ b/notebooks/Distributing an existing FLEXible experiment.ipynb
@@ -234,16 +234,10 @@
     "# Load a dataset, in a local experiment a FedDataset is nothing but a collection of datasets. Let's pick the first one from the collection.\n",
     "dataset = flex_dataset[list(flex_dataset.keys())[0]]\n",
     "\n",
-    "# We need to create first a FlexModel which will already contain everything that we need.\n",
-    "model = FlexModel()\n",
-    "model[\"model\"] = SimpleNet()\n",
-    "model[\"criterion\"] = torch.nn.CrossEntropyLoss()\n",
-    "model[\"optimizer_func\"] = torch.optim.Adam\n",
-    "model[\"optimizer_kwargs\"] = {}\n",
-    "\n",
     "# We create a client by passing all necessary information to the ClientBuilder.\n",
     "# We see that we can reuse the functions that we defined in the local experiment.\n",
-    "client = ClientBuilder().model(model) \\\n",
+    "client = ClientBuilder() \\\n",
+    "    .build_model(build_server_model) \\\n",
     "    .dataset(dataset) \\\n",
     "    .collect_weights(get_clients_weights) \\\n",
     "    .train(train) \\\n",
