--- a/notebooks/Distributing an existing FLEXible experiment.ipynb
+++ b/notebooks/Distributing an existing FLEXible experiment.ipynb
@@ -28,7 +28,13 @@
     "\n",
     "from flex.data import Dataset\n",
     "from flex.datasets import load\n",
-    "from flex.pool import init_server_model, deploy_server_model, collect_clients_weights, set_aggregated_weights, aggregate_weights\n",
+    "from flex.pool import (\n",
+    "    init_server_model,\n",
+    "    deploy_server_model,\n",
+    "    collect_clients_weights,\n",
+    "    set_aggregated_weights,\n",
+    "    aggregate_weights,\n",
+    ")\n",
     "from flex.pool import FlexPool\n",
     "from flex.model import FlexModel\n",
     "\n",
@@ -157,6 +163,7 @@
     "# Aggregate weights\n",
     "aggregators.map(aggregate_with_fedavg)\n",
     "\n",
+    "\n",
     "@set_aggregated_weights\n",
     "def set_agreggated_weights_to_server(server_flex_model: FlexModel, aggregated_weights):\n",
     "    with torch.no_grad():\n",
@@ -236,15 +243,17 @@
     "\n",
     "# We create a client by passing all necessary information to the ClientBuilder.\n",
     "# We see that we can reuse the functions that we defined in the local experiment.\n",
-    "client = ClientBuilder() \\\n",
-    "    .build_model(build_server_model) \\\n",
-    "    .dataset(dataset) \\\n",
-    "    .collect_weights(get_clients_weights) \\\n",
-    "    .train(train) \\\n",
-    "    .eval(evaluate_global_model, dataset) \\\n",
-    "    .set_weights(set_agreggated_weights_to_server) \\\n",
+    "client = (\n",
+    "    ClientBuilder()\n",
+    "    .build_model(build_server_model)\n",
+    "    .dataset(dataset)\n",
+    "    .collect_weights(get_clients_weights)\n",
+    "    .train(train)\n",
+    "    .eval(evaluate_global_model, dataset)\n",
+    "    .set_weights(set_agreggated_weights_to_server)\n",
     "    .build()\n",
-    "    \n",
+    ")\n",
+    "\n",
     "# Finally, we can run the client.\n",
     "client.run(address=\"you_address_here:port\")"
    ]
@@ -301,8 +310,10 @@
     "\n",
     "# Let's see the metrics.\n",
     "for node_id in metrics:\n",
-    "    print(f\"Client with id {node_id} has sent the following metrics: {metrics[node_id]}\")\n",
-    "    \n",
+    "    print(\n",
+    "        f\"Client with id {node_id} has sent the following metrics: {metrics[node_id]}\"\n",
+    "    )\n",
+    "\n",
     "# Running evaluation is equivalent.\n",
     "metrics = server.eval(node_ids=selected_ids)\n",
     "\n",
@@ -341,6 +352,7 @@
     "\n",
     "from flex.distributed.aio import Server\n",
     "\n",
+    "\n",
     "async def run_server():\n",
     "    # We need to create the server and storing it in a variable.\n",
     "    server = Server()\n",
@@ -368,8 +380,10 @@
     "\n",
     "    # Let's see the metrics.\n",
     "    for node_id in metrics:\n",
-    "        print(f\"Client with id {node_id} has sent the following metrics: {metrics[node_id]}\")\n",
-    "        \n",
+    "        print(\n",
+    "            f\"Client with id {node_id} has sent the following metrics: {metrics[node_id]}\"\n",
+    "        )\n",
+    "\n",
     "    # Running evaluation is equivalent.\n",
     "    metrics = await server.eval(node_ids=selected_ids)\n",
     "\n",
@@ -385,6 +399,7 @@
     "    # Finally, we can stop the server.\n",
     "    # This is very important to avoid memory leaks.\n",
     "    await server.stop()\n",
+    "\n",
     "\n",
     "# Run with asyncio\n",
     "asyncio.run(run_server())"
